js262/test/built-ins/Error/name.js


/*---
esid: sec-error.prototype.name
description: >
  The initial value of Error.prototype.name is "Error".
---*/

assert.sameValue(Error.prototype.name, 'Error');

